samples/_failures_safe/1761156591_e13f7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2bcac66.c: In function ‘main’:
./samples/SAFE/__tmp_f2bcac66.c:149: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f2bcac66.c:148:9: error: expected declaration or statement at end of input
  148 |         for
      |         ^~~
./samples/SAFE/__tmp_f2bcac66.c:148:9: error: expected declaration or statement at end of input
